# fastapi-react-nginx-template

./: README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: main.py
backend/app/core/: config.py  db.py
config/nginx/conf/: geniungamartya.xyz.conf
reverse-proxy/: README.md  compose.nginx.yml
reverse-proxy/config/nginx/conf/: geniungamartya.xyz.conf
